camera and photo

--- a/Focus timer/Info.plist
+++ b/Focus timer/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow me</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow me</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
